# web-renderer

./: .gitignore  CMakeLists.txt  README.md  env.sh
app/include/: cef_render.h  simple_app.h  simple_handler.h
app/src/: cef_render.cpp  main.cpp  simple_app.cpp  simple_handler.cpp
